允许字符转义